--- a/package.json
+++ b/package.json
@@ -10,9 +10,14 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@fontsource-variable/montserrat": "^5.0.18",
+    "@fontsource/montserrat": "^5.0.17",
+    "@fontsource/open-sans": "^5.0.27",
+    "framer-motion": "^11.0.15",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-useanimations": "^2.10.0"
+    "react-useanimations": "^2.10.0",
+    "typewriter-effect": "^2.21.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.43",
