--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-useanimations": "^2.10.0",
+    "react-world-flags": "^1.6.0",
     "typewriter-effect": "^2.21.0"
   },
   "devDependencies": {
