--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "https://seba-monsalve.github.io/portafoliov2",
   "name": "portafolio-01",
   "private": true,
   "version": "0.0.0",
@@ -7,13 +8,16 @@
     "dev": "vite",
     "build": "tsc && vite build",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "dependencies": {
     "@fontsource-variable/montserrat": "^5.0.18",
     "@fontsource/montserrat": "^5.0.17",
     "@fontsource/open-sans": "^5.0.27",
     "framer-motion": "^11.0.15",
+    "gh-pages": "^6.1.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-useanimations": "^2.10.0",
