--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://seba-monsalve.github.io/",
+  "homepage": "https://https://seba-monsalve.github.io/portafoliov2",
   "name": "portafolio-01",
   "private": false,
   "version": "0.0.0",
